FIX/PLF-8102: Arabic text alignment

--- a/platform-ui-skin/src/main/webapp/skin/less/social/skin/Activity/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/social/skin/Activity/Style.less
@@ -2203,3 +2203,6 @@ blockquote:after {
         width: 100%;
     }
 }
+html:lang(ar) .activityStream .description, html:lang(ar) .activityStream .contentComment {
+    direction: rtl;
+}
